--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@types/react": "^18.0.7",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "d3": "^7.4.4",
     "date-fns": "^2.28.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
+    "react-minimal-pie-chart": "^8.3.0",
     "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.1",
+    "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4",
@@ -48,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/d3": "^7.1.0",
     "@types/styled-components": "^5.1.25"
   }
 }
