--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
+    "react-icons": "^4.3.1",
     "react-minimal-pie-chart": "^8.3.0",
     "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.1",
